Added navbar and cards to homepage.
Looks better visually with better navigation for users.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,33 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>OR - Home</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
-            <li><a href="recipes/lasagna1.html">World's Best Lasagna</a></li>
-            <li><a href="recipes/lasagna2.html">World's Best Lasagna</a></li>
-        </ul>
+        <div class="navbar">
+            <h1>Odin Recipes</h1>
+        </div>
+        <div class="flex-container">
+            <div class="item">
+                <img src="images/lasagna.avif">
+                <div>
+                    <a href="recipes/lasagna.html">World's Best Lasagna</a>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/lasagna.avif">
+                <div>
+                    <a href="recipes/lasagna.html">World's Best Lasagna</a>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/lasagna.avif">
+                <div>
+                    <a href="recipes/lasagna.html">World's Best Lasagna</a>
+                </div>
+            </div>            
+        </div>
+        <h2>Welcome to Odin's recipes where you get all the best Lasagna recipes!</h2>
+        
     </body>
 </html>
